# rust-static-reflect

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
lib/derive/: Cargo.toml
lib/derive-internals/: Cargo.toml
lib/derive-internals/src/: fields.rs  func.rs  lib.rs
lib/derive-internals/tests/: funcs.rs  simple.rs
lib/derive/src/: lib.rs
lib/derive/src/internals/: fields.rs  func.rs  mod.rs  utils.rs
lib/derive/tests/: funcs.rs  simple.rs  union.rs
src/: builtins.rs  core.rs  funcs.rs  lib.rs  macros.rs  refs.rs  types.rs
src/types/: serialize.rs
tests/: serde.rs
