[package]
name = "static-reflect"
version = "0.2.0-alpha.6"
edition = "2021"
description = "Static type information, giving a form of compile-time reflection"
license = "MIT"
repository = "https://github.com/DuckLogic/rust-static-reflect"
readme = "README.md"


[features]
default = ["never", "builtins"]
# Support using the never type
never = []
# Support the 'builtin' alternative to stdlib types
builtins = []

[workspace]
members = ["lib/*"]

[package.metadata.docs.rs]
all-features = true

