[package]
name = "static-reflect-derive-internals"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "The internal implementation of procedural derive for `static-reflect`"
repository = "https://github.com/DuckLogic/rust-static-reflect"

[dependencies]
itertools = "0.9.0"
proc-macro2 = "^1"
quote = "^1"
indexmap = "1.6"

[dependencies.syn]
version = "1"
features = ["full", "extra-traits"]
