[package]
name = "static-reflect-derive-internals"
version = "0.2.0-alpha.1"
edition = "2018"
license = "MIT"
description = "The internal implementation of procedural derive for `static-reflect`"
repository = "https://github.com/DuckLogic/rust-static-reflect"

[dependencies]
itertools = "0.10.0"
proc-macro2 = "^1"
quote = "^1"
indexmap = "1.6"

[dependencies.syn]
version = "1"
features = ["full", "extra-traits"]
