[package]
name = "static-reflect-derive"
description = "Procedural derive for static-reflect"
version = "0.1.7"
edition = "2018"
license = "MIT"
repository = "https://github.com/DuckLogic/rust-static-reflect"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1"
syn = "1"

# Actual implementation
[dependencies.static-reflect-derive-internals]
version = "0.1.0"
path = "../derive-internals"

[dev-dependencies]
# Testing
static-reflect = { version = "0.1.0", path = "../.." }
pretty_assertions = "0.7.2"
