[package]
name = "static-reflect-derive"
description = "Procedural derive for static-reflect"
version = "0.2.0-alpha.3"
edition = "2018"
license = "MIT"
repository = "https://github.com/DuckLogic/rust-static-reflect"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
itertools = "0.10.0"
quote = "1"
indexmap = "1.6"

[dependencies.syn]
version = "1"
features = ["full", "extra-traits"]

[dev-dependencies]
# Testing
static-reflect = { version = "0.2.0-alpha.2", path = "../.." }
pretty_assertions = "0.7.2"
