[package]
name = "static-reflect-derive"
description = "Procedural derive for static-reflect"
version = "0.2.0-alpha.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/DuckLogic/rust-static-reflect"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
itertools = "0.13"
quote = "1"
indexmap = "2"

[dependencies.syn]
version = "2"
features = ["full", "extra-traits"]

[dev-dependencies]
# Testing
static-reflect = { version = "0.2.0-alpha.7", path = "../.." }
pretty_assertions = "1.4"
